--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,11 +1,542 @@
+@font-face {
+    font-family: 'fragolino';
+    font-weight: 300;
+    font-style: normal;
+    src: url("../fonts/fragolino/FragolinoLight.eot");
+    src: url("../fonts/fragolino/FragolinoLight.eot?#iefix") format("embedded-opentype"), url("../fonts/fragolino/FragolinoLight.woff2") format("woff2"), url("../fonts/fragolino/FragolinoLight.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: 'fragolino-book';
+    font-weight: 400;
+    font-style: normal;
+    src: url("../fonts/fragolino/FragolinoBook.eot") format("embedded-opentype");
+    src: url("../fonts/fragolino/FragolinoBook.eot?#iefix") format("embedded-opentype"), url("../fonts/fragolino/FragolinoBook.woff2") format("woff2"), url("../fonts/fragolino/FragolinoBook.ttf") format("truetype"); }
+
+@font-face {
+    font-family: 'fragolino-book-cond';
+    font-weight: 400;
+    font-style: normal;
+    src: url("../fonts/fragolino/FragolinoCondBook.eot") format("embedded-opentype");
+    src: url("../fonts/fragolino/FragolinoCondBook.eot?#iefix") format("embedded-opentype"), url("../fonts/fragolino/FragolinoCondBook.woff2") format("woff2"), url("../fonts/fragolino/FragolinoCondBook.ttf") format("truetype"); }
+
+@font-face {
+    font-family: 'fragolino';
+    font-weight: 500;
+    font-style: normal;
+    src: url("../fonts/fragolino/FragolinoMedium.eot") format("embedded-opentype");
+    src: url("../fonts/fragolino/FragolinoMedium.eot?#iefix") format("embedded-opentype"), url("../fonts/fragolino/FragolinoMedium.woff2") format("woff2"), url("../fonts/fragolino/FragolinoMedium.ttf") format("truetype"); }
+
+@font-face {
+    font-family: 'fragolino';
+    font-weight: 700;
+    font-style: normal;
+    src: url("../fonts/fragolino/FragolinoBold.eot") format("embedded-opentype");
+    src: url("../fonts/fragolino/FragolinoBold.eot?#iefix") format("embedded-opentype"), url("../fonts/fragolino/FragolinoBold.woff2") format("woff2"), url("../fonts/fragolino/FragolinoBold.ttf") format("truetype"); }
+
+@font-face {
+    font-family: 'fragolino-cond';
+    font-weight: 700;
+    font-style: normal;
+    src: url("../fonts/fragolino/FragolinoCondBold.eot") format("embedded-opentype");
+    src: url("../fonts/fragolino/FragolinoCondBold.eot?#iefix") format("embedded-opentype"), url("../fonts/fragolino/FragolinoCondBold.woff2") format("woff2"), url("../fonts/fragolino/FragolinoCondBold.ttf") format("truetype"); }
+
+.column-title {
+    font-weight: 700;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.column {
+    padding: 10px;
+    /*border: 1px solid #000;*/
+}
+
+.block-title {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    text-align: center;
+    margin: 20px 0;
+    font-weight: 700;
+}
+
+.settings-table_block_title {
+     grid-template-columns: 1fr 1fr;
+ }
+
+.calculator-table_block_title {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.calculator-table_name {
+    grid-column: 3 / 4;
+}
+
+/*block styles*/
+/*.settings-table_item {*/
+/*    display: grid;*/
+/*    grid-template-columns: 1fr 1fr;*/
+/*    padding: 5px;*/
+/*    align-items: center;*/
+/*}*/
+
+/*.settings-table_item-input {*/
+/*    text-align: center;*/
+/*}*/
+
+.MuiTypography-root.MuiFormControlLabel-label.MuiTypography-body1 {
+    font-size: 12px;
+}
+
+.MuiFormControlLabel-root.MuiFormControlLabel-labelPlacementTop {
+    margin: 0 5px !important;
+}
+
+
+.calculator-table_row,
+.salary-table_item {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    padding: 5px;
+    align-items: center;
+}
+
+.calculator-table_row {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.effort {
+    grid-column: 2 / 3;
+    font-size: 12px;
+}
+
+.salary-table_item-input:not(:last-of-type) {
+    margin-right: 5px;
+}
+
+.calculator-table_item {
+    text-align: center;
+}
+
+.table-root {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    height: 100vh;
+}
+
+/*loader styles*/
+
+.loader-block {
+    display: grid;
+    place-content: center;
+    text-align: center;
+}
+
+.loader-title {
+    background-image: url("../images/loader-title.svg");
+    width: 388px;
+    height: 43px;
+}
+
+.loader-subtitle {
+    font-family: 'fragolino';
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 46px;
+    letter-spacing: 0.03em;
+    margin: 0;
+    margin-top: 27px;
+}
+
+.loader-arrow {
+    text-align: center;
+    background-image: url("../images/loader-arrow.svg");
+    width: 32px;
+    height: 32px;
+    display: block !important;
+    margin: 0 auto;
+    margin-top: 120px;
+}
+
+/*setting table styles*/
+
+.setting-table {
+    background-color: #F2C94C;
+    padding: 30px 110px;
+}
+
+.settings-table_item-name {
+    font-family: 'fragolino';
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 23px;
+}
+
+.settings-table_item-input {
+    margin-top: 15px;
+}
+
+.settings-table_item:not(:first-of-type) {
+    margin-top: 42px;
+}
+
+.platform-input {
+    z-index: -1;
+    opacity: 0;
+    width: 152px;
+    height: 46px;
+    margin-right: 30px;
+    position: absolute;
+}
+
+.settings-table_item-input > label {
+    height: 46px;
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    padding: 0;
+}
+
+.platform-input-label::after {
+    z-index: 2;
+    display: block;
+    position: absolute;
+    font-family: 'fragolino';
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 23px;
+    content: '';
+    width: 152px;
+    height: 46px;
+    border: 1px solid #000;
+    margin-right: 30px;
+    display: grid;
+    place-items: center;
+    transition: 0.5s;
+}
+
+.web-label::after {
+    content: 'web';
+    left: 0;
+    top: 0;
+}
+
+.mobile-label::after {
+    content: 'mobile-app';
+    left: 174px;
+    top: 0;
+}
+
+.desktop-label::after {
+    content: 'desktop';
+    left: 350px;
+    top: 0;
+}
+
+.platform-input:checked+label::after {
+    background-color: black;
+    color: #fff;
+    transition: 0.5s;
+}
+
+ /* building */
+
 .number-input {
-    margin-left: 10px !important;
+    width: 114px;
+    padding: 10px 15px;
+    background-color: transparent;
+    border-radius: 30px;
+    border: 1px solid #000;
+    color: black;
+    font-family: 'fragolino';
+    font-weight: 300;
+    font-size: 12px;
+    line-height: 15px;
 }
 
-.MuiTableCell-root.MuiTableCell-head.MuiTableCell-alignCenter {
-    width: 700px !important;
+.number-input:not(:last-of-type) {
+    margin-right: 20px;
 }
 
-.MuiTypography-body1 {
-    font-size: 0.6rem !important;
+.number-input:focus {
+    outline: none;
+    background-color: #fff;
 }
+
+
+/* styles for material radio*/
+
+/*.MuiFormControl-root {*/
+/*    width: 100%;*/
+/*}*/
+
+/*.facade-complexity {*/
+/*    display: flex !important;*/
+/*    flex-direction: row !important;*/
+/*    justify-content: space-between !important;*/
+/*    width: 100%;*/
+/*}*/
+
+/*.MuiRadio-colorPrimary.Mui-checked {*/
+/*    color: #000 !important;*/
+/*}*/
+
+/*.MuiFormControlLabel-root {*/
+/*    display: flex !important;*/
+/*    flex-direction: column;*/
+/*    margin-left: 0 !important;*/
+/*}*/
+
+/*.building-complexity_input {*/
+/*    position: relative;*/
+/*}*/
+
+/*.PrivateRadioButtonIcon-root-5.PrivateRadioButtonIcon-checked-7 .PrivateRadioButtonIcon-layer-6 { !*make radio bigger*!*/
+/*    transform: scale(1.4) !important;*/
+/*}*/
+
+/*.building-complexity_input::after:not(:last-of-type) {*/
+/*    position: absolute;*/
+/*    width: 252px;*/
+/*    height: 38px;*/
+/*    top: calc(50% - 21px);*/
+/*    left: 0;*/
+/*    content: '';*/
+/*    background-image: url("../images/radio_line.svg") !important;*/
+/*    background-repeat: no-repeat;*/
+/*    background-size: contain;*/
+/*}*/
+
+/*.building-complexity_input-left {*/
+/*    text-align: left;*/
+/*}*/
+
+/*.MuiTypography-root.MuiFormControlLabel-label.MuiTypography-body1 {*/
+/*    font-family: 'fragolino' !important;*/
+/*    font-weight: 700 !important;*/
+/*    font-size: 14px !important;*/
+/*    line-height: 18px !important;*/
+/*    text-align: center;*/
+/*}*/
+
+.general-input-block {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.general-input-div {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+.general-label {
+    font-family: 'fragolino';
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 18px;
+    cursor: pointer;
+    margin-top: 25px;
+    position: relative;
+    /*text-align: center;*/
+}
+
+.facade-complexity-div_center {
+    align-items: center;
+    text-align: center;
+}
+
+.facade-complexity-div_right {
+    align-items: flex-end;
+    text-align: right;
+}
+
+.general-input {
+    opacity: 0;
+    position: absolute;
+}
+
+.general-label::after {
+    z-index: 2;
+    display: block;
+    position: absolute;
+    content: '';
+    top: -20px;
+    width: 16px;
+    height: 16px;
+    border: 1px solid #000;
+    border-radius: 50%;
+    background-color: #F2C94C;
+}
+
+.facade-complexity-label_center::after {
+    left: calc(50% - 8px);
+}
+
+.facade-complexity-label_right::after {
+    right: 0;
+}
+
+.facade-complexity-input:checked + .facade-complexity-label {
+    color: #fff;
+}
+
+.facade-complexity-input:checked + .facade-complexity-label::after {
+    background-image: url("../images/radio_ellipse.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 12px 12px;
+}
+
+.line {
+    background-image: url("../images/radio_line.svg") !important;
+    background-repeat: no-repeat;
+    background-size: contain;
+    top: calc(50% - 29px);
+    left: -2px;
+    width: 262px;
+    height: 38px;
+    position: absolute;
+    z-index: 0;
+}
+
+.line-center {
+    left: 73px;
+    /*width: 222px;*/
+}
+
+.tour-block-360 {
+    display: flex;
+}
+
+.tour-input-360 {
+    width: 100%;
+}
+
+.furnishing-complexity-label_center::after {
+    left: calc(50% - 8px);
+}
+
+.furnishing-complexity-label_right::after {
+    right: 0;
+}
+
+.furnishing-complexity-input:checked + .furnishing-complexity-label {
+    color: #fff;
+}
+
+.furnishing-complexity-input:checked + .furnishing-complexity-label::after {
+    background-image: url("../images/radio_ellipse.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 12px 12px;
+}
+
+.furnishing-complexity-div_center {
+    align-items: center;
+    text-align: center;
+}
+
+.furnishing-complexity-div_right {
+    align-items: flex-end;
+    text-align: right;
+}
+
+.line-furnishing {
+    top: calc(50% - 20px);
+}
+
+.environment-complexity-label_center::after {
+    left: calc(50% - 8px);
+}
+
+.environment-complexity-label_right::after {
+    right: 0;
+}
+
+.environment-complexity-input:checked + .environment-complexity-label {
+    color: #fff;
+}
+
+.environment-complexity-input:checked + .environment-complexity-label::after {
+    background-image: url("../images/radio_ellipse.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 12px 12px;
+}
+
+.environment-complexity-div_center {
+    align-items: center;
+    text-align: center;
+}
+
+.environment-complexity-div_right {
+    align-items: flex-end;
+    text-align: right;
+}
+
+.line-environment {
+    top: calc(50% - 20px);
+}
+
+
+/* buttons in project features block */
+.actions-block {
+    margin-top: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.reset-button_styles {
+    background: transparent;
+    border: none;
+    font-family: Fragolino;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 18px;
+}
+
+.clear-button {
+    text-transform: uppercase;
+    text-decoration-line: underline;
+    cursor: pointer;
+}
+
+.clear-button:focus {
+    outline: none;
+}
+
+.calculate-button {
+    width: 160px;
+    height: 36px;
+    display: block;
+    align-items: center;
+    justify-content: center;
+    background-color: #000;
+    transform: skewX(-30deg);
+}
+
+.calculate-button > span {
+    padding-top: 9px;
+    display: block;
+    font-weight: 700;
+    cursor: pointer;
+    /*align-self: center;*/
+    width: 160px;
+    height: 36px;
+    color: #fff;
+    text-transform: uppercase;
+    transform: skewX(30deg);
+}
+
+.calculate-button:disabled {
+    opacity: 0.2;
+    cursor: auto;
+}
+
+
+
+
+
