--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -323,11 +323,16 @@ body {
     background-color: transparent;
     border-radius: 30px;
     border: 1px solid #000;
-    color: black;
-    font-family: 'fragolino';
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 15px;
+    position: relative;
+    /*color: black;*/
+    /*font-family: 'fragolino';*/
+    /*font-weight: 400;*/
+    /*font-size: 12px;*/
+    /*line-height: 15px;*/
+}
+
+.buildings-input {
+    top: -14px;
 }
 
 .number-input:not(:last-of-type) {
@@ -338,62 +343,6 @@ body {
     outline: none;
     background-color: #fff;
 }
-
-
-/* styles for material radio*/
-
-/*.MuiFormControl-root {*/
-/*    width: 100%;*/
-/*}*/
-
-/*.facade-complexity {*/
-/*    display: flex !important;*/
-/*    flex-direction: row !important;*/
-/*    justify-content: space-between !important;*/
-/*    width: 100%;*/
-/*}*/
-
-/*.MuiRadio-colorPrimary.Mui-checked {*/
-/*    color: #000 !important;*/
-/*}*/
-
-/*.MuiFormControlLabel-root {*/
-/*    display: flex !important;*/
-/*    flex-direction: column;*/
-/*    margin-left: 0 !important;*/
-/*}*/
-
-/*.building-complexity_input {*/
-/*    position: relative;*/
-/*}*/
-
-/*.PrivateRadioButtonIcon-root-5.PrivateRadioButtonIcon-checked-7 .PrivateRadioButtonIcon-layer-6 { !*make radio bigger*!*/
-/*    transform: scale(1.4) !important;*/
-/*}*/
-
-/*.building-complexity_input::after:not(:last-of-type) {*/
-/*    position: absolute;*/
-/*    width: 252px;*/
-/*    height: 38px;*/
-/*    top: calc(50% - 21px);*/
-/*    left: 0;*/
-/*    content: '';*/
-/*    background-image: url("../images/radio_line.svg") !important;*/
-/*    background-repeat: no-repeat;*/
-/*    background-size: contain;*/
-/*}*/
-
-/*.building-complexity_input-left {*/
-/*    text-align: left;*/
-/*}*/
-
-/*.MuiTypography-root.MuiFormControlLabel-label.MuiTypography-body1 {*/
-/*    font-family: 'fragolino' !important;*/
-/*    font-weight: 700 !important;*/
-/*    font-size: 14px !important;*/
-/*    line-height: 18px !important;*/
-/*    text-align: center;*/
-/*}*/
 
 .general-input-block {
     display: grid;
@@ -487,6 +436,7 @@ body {
 
 .tour-input-360 {
     width: 100%;
+    height: 15px;
 }
 
 .furnishing-complexity-label_center::after {
@@ -608,10 +558,10 @@ button:focus {
     transform: skewX(30deg);
 }
 
-.calculate-button:disabled {
-    opacity: 0.2;
-    cursor: auto;
-}
+/*.calculate-button:disabled {*/
+/*    !*opacity: 0.2;*!*/
+/*    cursor: auto;*/
+/*}*/
 
 /*********** buttons in calculate block ***********/
 
@@ -823,7 +773,7 @@ button:focus {
     }
 
     .settings-table_item-input {
-        margin-top: 15px;
+        margin-top: 20px;
     }
 
     .settings-table_item:not(:first-of-type) {
@@ -926,7 +876,8 @@ button:focus {
     filter: drop-shadow(0px 3px 8px rgba(0, 0, 0, 0.4)) !important;
 }
 
-.MuiTooltip-tooltipPlacementBottom {
+.MuiTooltip-tooltipPlacementBottom,
+.MuiTooltip-tooltipPlacementTop {
     font-family: Fragolino !important;
     font-weight: 400 !important;
     font-size: 14px !important;
@@ -937,6 +888,13 @@ button:focus {
 .MuiTooltip-arrow {
     color: #fff !important;
     width: 19px !important;
+}
+
+.MuiTooltip-tooltipPlacementTop {
+    left: 91%;
+    width: 170px !important;
+    display: grid;
+    place-items: center;
 }
 
 /***************** Footnote ********************/
@@ -959,3 +917,33 @@ button:focus {
 .platform_footnote {
     top: 0;
 }
+
+/********** input value *************/
+
+
+/*.tour-apart-label::after {*/
+/*    content: 'Apt. tour';*/
+/*}*/
+
+/*.tour-apart-label.top::after ~ .tour-apart-input:focus  {*/
+/*    animation-duration: 0.2s;*/
+/*    animation-iteration-count: 1;*/
+/*    animation-name: top;*/
+/*    animation-timing-function: ease;*/
+/*    animation-fill-mode: forwards;*/
+/*}*/
+
+/*@keyframes top {*/
+/*    from {*/
+/*        top: calc(100% - 27px);*/
+/*        font-weight: 300;*/
+/*        font-size: 14px;*/
+/*        line-height: 17px;*/
+
+/*    } to {*/
+/*         top: calc(100% - 53px);*/
+/*         font-weight: 400;*/
+/*         font-size: 12px;*/
+/*         line-height: 15px;*/
+/*  }*/
+/*}*/
