create new components

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -872,6 +872,8 @@ button:focus {
     border-radius: 0% !important;
     width: 136px !important;
     height: 38px !important;
+    display: grid !important;
+    place-items: center;
     text-align: center !important;
     filter: drop-shadow(0px 3px 8px rgba(0, 0, 0, 0.4)) !important;
 }
