--- a/src/styles/scss/_inputs.scss
+++ b/src/styles/scss/_inputs.scss
@@ -64,7 +64,7 @@
 }
 
 .buildings-total-label::after {
-  content: 'Building total*';
+  content: 'Buildings total*';
 }
 
 .input-text-label.top::after {
