--- a/src/styles/scss/_salary-popup.scss
+++ b/src/styles/scss/_salary-popup.scss
@@ -29,7 +29,7 @@
 .salary-input-outsource {
   width: 40px;
   padding: 7px 18px;
-  position: relative;
+  //position: relative;
 }
 
 .label-outsource {
